--- a/views/itens.ejs
+++ b/views/itens.ejs
@@ -10,11 +10,18 @@
     <% for(let post of posts){ %>
         <div style="border-top: 1px solid black; margin-top: 50px; width: 35vw">
             <h3>Id do Item: <%= post._id %></h3>
+            <h3>Id Cliente: <%= post.clienteId %></h3>
+            <h3>Ambiente: <%= post.ambiente %></h3>
             <h3>Tipo: <%= post.tipo %></h3>
-            <h3>Marca: <%= post.opcoes[0].marca %></h3>
-            <h3>Modelo: <%= post.opcoes[0].modelo %></h3>
-            <h3>Preço : <%= post.opcoes[0].preco %></h3>
-            <h3>Id do cliente: <%= post.idCliente %></h3>
+            <h3>Marca: <%= post.marca %></h3>
+            <h3>Modelo: <%= post.modelo %></h3>
+            <h3>Quantidade: <%= post.quantidade %></h3>
+            <h3>Preço : <%= post.preco %></h3>
+            <h3>Link: <%= post.link %></h3>
+            <h3>Descrição: <%= post.descricao%></h3>
+            <h3>Foto: <%= post.foto %></h3>
+            <h3>Aprovado: <%= post.aprovado %></h3>
+
         </div>
     <% } %>
 </body>
